# EigenDialectos

./: .env.example  .gitignore  LICENSE  MANIFEST.yaml  Makefile  PROGRESS.md  README.md  pyproject.toml
configs/: config.yaml
configs/corpus/: default.yaml  demo.yaml  full.yaml
configs/tensor/: default.yaml
docs/: api_reference.md  architecture.md  dialect_feature_catalog.md  experiment_protocols.md  mathematical_framework.md
explorer/: server.py
notebooks/: 01_corpus_exploration.ipynb  02_embedding_inspection.ipynb  03_spectral_analysis_demo.ipynb  04_dial_generation_demo.ipynb  05_tensor_decomposition.ipynb  06_experiment_results.ipynb  07_final_visualizations.ipynb
paper/: eigendialectos.tex  research_log.md  v2_architecture.md
reports/: applications_eigenv3.tex  dcl_cancar_optimization_report.md  dcl_cancar_optimization_report.tex  foundations_losses_eigendalectos.tex  pretrain_trajectory.tex  software_architecture.tex  v2_contrastive_analysis.tex  v3_architecture_interventions.tex
scripts/: analyze_results.py  baseline_comparison.py  bootstrap_ci.py  build_corpus.py  classify_projection.py  classify_text.py  compare_methods.py  corpus_balance_sensitivity.py  download_corpora.sh  download_corpus_v4.py  download_v45_source.py  eval_checkpoint.py  full_pipeline.py  generate_report.py  linguistic_categorization.py  merge_v45_corpus.py  run_all_experiments.sh  run_analysis.py  run_pipeline.py  run_pipeline_v2.py  run_v2_real.py  setup_environment.sh  train_eigen3.py  training_report.py  training_report.sh  validate_project.py  validate_v2_comprehensive.py  validate_v3_full.py
tests/: conftest.py
(+276 files in other folders)
