[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eigendialectos"
version = "0.1.0"
description = "Spectral analysis of linguistic dialect variation"
requires-python = ">=3.10"
license = {text = "MIT"}
readme = "README.md"

dependencies = [
    # Core scientific
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "torch>=2.0",
    "tqdm>=4.65",
    # NLP
    "gensim>=4.3",
    "transformers>=4.30",
    "sentence-transformers>=2.2",
    "tokenizers>=0.13",
    "datasets>=2.14",
    "peft>=0.4",
    # Spectral / Tensor
    "tensorly>=0.8",
    # Visualization
    "matplotlib>=3.7",
    "seaborn>=0.12",
    "plotly>=5.15",
    "umap-learn>=0.5",
    # Config
    "hydra-core>=1.3",
    "omegaconf>=2.3",
    # CLI
    "click>=8.1",
    # NLP utilities
    "spacy>=3.5",
    "langdetect>=1.0",
    # Corpus downloading
    "requests>=2.28",
    "zstandard>=0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.1",
    "mypy>=1.5",
]

[project.scripts]
eigendialectos = "eigendialectos.cli.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
